Fix horizontal spacing

--- a/themes/guidonciniverdi/style/2_content.pcss
+++ b/themes/guidonciniverdi/style/2_content.pcss
@@ -31,7 +31,7 @@
 }
 
 .entry-content {
-  @apply mb-8 mx-4 md:mx-0;
+  @apply mb-8;
 
   .wp-block-group, .wp-block-columns {
     @apply gap-4;
